crates/types/tests/snapshots/gaggimate_snapshots__cup_removed.snap
---
source: crates/types/tests/gaggimate_snapshots.rs
expression: message
---
Status(
    Status {
        process: Absent,
        current_temperature: Absent,
        target_temperature: Absent,
        current_pressure: Absent,
        current_flow: Absent,
        current_weight: Value(
            -76.5,
        ),
        bluetooth_weight: Value(
            -76.5,
        ),
        scale_connected: Value(
            true,
        ),
        system_state: Absent,
        warnings: Absent,
        target_pressure: Absent,
        machine_mode: Absent,
        profile_label: Absent,
        pressure_capable: Absent,
        dimming_capable: Absent,
    },
)
