crates/types/tests/snapshots/gaggimate_snapshots__partial_update.snap
---
source: crates/types/tests/gaggimate_snapshots.rs
expression: message
---
Status(
    Status {
        process: Absent,
        current_temperature: Absent,
        target_temperature: Absent,
        current_pressure: Value(
            0.0,
        ),
        current_flow: Absent,
        current_weight: Value(
            38.09,
        ),
        bluetooth_weight: Absent,
        scale_connected: Absent,
        system_state: Absent,
        warnings: Absent,
        target_pressure: Absent,
        machine_mode: Absent,
        profile_label: Absent,
        pressure_capable: Absent,
        dimming_capable: Absent,
    },
)
